@@ -13,7 +13,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
+
 
 /**
  * Executes KeY prover for a list of {@link TestFile}s in a separate process.
@@ -41,14 +42,13 @@ public abstract class ForkedTestFileRunner implements Serializable {
     }
 
     /*
-     * Converts a {@link Serializable} object into a byte array and stores it in
-     * a file at given location.
+     * Converts a {@link Serializable} object into a byte array and stores it in a file at given
+     * location.
      */
-    private static void writeObject(Path path, Serializable s)
-            throws IOException {
+    private static void writeObject(Path path, Serializable s) throws IOException {
 
         try (ObjectOutputStream objectOutputStream =
-                     new ObjectOutputStream(Files.newOutputStream(path))) {
+            new ObjectOutputStream(Files.newOutputStream(path))) {
             objectOutputStream.writeObject(s);
         }
     }
@@ -56,10 +56,10 @@ public abstract class ForkedTestFileRunner implements Serializable {
     /**
      * Converts contents of a file back into an object.
      */
-    private static <S> S readObject(Path path, Class<S> type) throws IOException,
-            ClassNotFoundException {
+    private static <S> S readObject(Path path, Class<S> type)
+            throws IOException, ClassNotFoundException {
         try (ObjectInputStream objectInputStream =
-                     new ObjectInputStream(Files.newInputStream(path))) {
+            new ObjectInputStream(Files.newInputStream(path))) {
             Object result = objectInputStream.readObject();
             return type.cast(result);
         }
@@ -68,31 +68,33 @@ public abstract class ForkedTestFileRunner implements Serializable {
     /**
      * Process a single {@link TestFile} in a separate subprocess.
      */
-    public static TestResult processTestFile(TestFile testFile,
-                                             Path pathToTempDir) throws Exception {
-        return processTestFiles(Arrays.asList(testFile), pathToTempDir).get(0);
+    public static TestResult processTestFile(TestFile testFile, Path pathToTempDir)
+            throws Exception {
+        List<TestFile> files = List.of(testFile);
+        return processTestFiles(files, pathToTempDir).get(0);
     }
 
     /**
      * Process a list of {@link TestFile}s in a separate subprocess.
      *
-     * @param testName Name of the test used as prefix for test folder.
+     * @param testFiles files to be tested
+     * @param pathToTempDir a path to the temporary data directory
      */
-    public static List<TestResult> processTestFiles(List<TestFile> testFiles,
-                                                    Path pathToTempDir) throws Exception {
+    public static List<TestResult> processTestFiles(List<TestFile> testFiles, Path pathToTempDir)
+            throws Exception {
         if (testFiles.isEmpty()) {
             return new ArrayList<>();
         }
         ProofCollectionSettings settings = testFiles.get(0).getSettings();
 
         writeObject(getLocationOfSerializedTestFiles(pathToTempDir),
-                testFiles.toArray(new TestFile[testFiles.size()]));
+            testFiles.toArray(new TestFile[0]));
 
-        ProcessBuilder pb = new ProcessBuilder(
-                "java", "-classpath", System.getProperty("java.class.path"),
+        ProcessBuilder pb =
+            new ProcessBuilder("java", "-classpath", System.getProperty("java.class.path"),
                 // pass through the value of key.disregardSettings
-                "-D" + PathConfig.DISREGARD_SETTINGS_PROPERTY + "=" +
-                        Boolean.getBoolean(PathConfig.DISREGARD_SETTINGS_PROPERTY));
+                "-D" + PathConfig.DISREGARD_SETTINGS_PROPERTY + "="
+                    + Boolean.getBoolean(PathConfig.DISREGARD_SETTINGS_PROPERTY));
         List<String> command = pb.command();
 
         // TODO make sure no injection happens here?
@@ -114,9 +116,8 @@ public abstract class ForkedTestFileRunner implements Serializable {
             } catch (NumberFormatException e) {
                 throw new IOException("port number must be a number");
             }
-            command.addAll(Arrays.asList("-Xdebug", "-Xnoagent",
-                    "-Djava.compiler=NONE", "-Xrunjdwp:transport=dt_socket,server=y,suspend=" +
-                            suspend + ",address=" + port));
+            command.addAll(Arrays.asList("-Xdebug", "-Xnoagent", "-Djava.compiler=NONE",
+                "-Xrunjdwp:transport=dt_socket,server=y,suspend=" + suspend + ",address=" + port));
         }
 
         command.add(ForkedTestFileRunner.class.getName());
@@ -125,8 +126,8 @@ public abstract class ForkedTestFileRunner implements Serializable {
         Process process = pb.start();
         IOForwarder.forward(process);
         process.waitFor();
-        assertEquals("Executed process terminated with non-zero exit value.",
-                process.exitValue(), 0);
+        assertEquals(0, process.exitValue(),
+            "Executed process terminated with non-zero exit value.");
 
         /*
          * Check if an exception occured and rethrow it if one occured.
@@ -135,16 +136,15 @@ public abstract class ForkedTestFileRunner implements Serializable {
         if (exceptionFile.toFile().exists()) {
             Throwable t = ForkedTestFileRunner.readObject(exceptionFile, Throwable.class);
             throw new Exception(
-                    "Subprocess returned exception (see cause for details):\n"
-                            + t.getMessage(), t);
+                "Subprocess returned exception (see cause for details):\n" + t.getMessage(), t);
         }
 
         /*
          * Read serialized list of test results and return.
          */
         Path testResultsFile = getLocationOfSerializedTestResults(pathToTempDir);
-        assertTrue("File containing serialized test results not present.",
-                testResultsFile.toFile().exists());
+        assertTrue(testResultsFile.toFile().exists(),
+            "File containing serialized test results not present.");
         TestResult[] array = ForkedTestFileRunner.readObject(testResultsFile, TestResult[].class);
 
         return Arrays.asList(array);
@@ -152,21 +152,18 @@ public abstract class ForkedTestFileRunner implements Serializable {
 
     public static void main(String[] args) throws IOException {
         /*
-         * Check for existence of temp dir before entering try-catch block.
-         * Throwables occuring in this block are written to temp dir, so its
-         * existence needs to be confirmed beforehand.
+         * Check for existence of temp dir before entering try-catch block. Throwables occuring in
+         * this block are written to temp dir, so its existence needs to be confirmed beforehand.
          */
         Path tempDirectory = Paths.get(args[0]);
         if (!tempDirectory.toFile().exists()) {
-            throw new Error("RunAllProofs temporary directory does not exist: "
-                    + tempDirectory);
+            throw new Error("RunAllProofs temporary directory does not exist: " + tempDirectory);
         }
 
         boolean error = false;
         try {
-            TestFile[] testFiles =
-                    ForkedTestFileRunner.readObject(
-                            getLocationOfSerializedTestFiles(tempDirectory), TestFile[].class);
+            TestFile[] testFiles = ForkedTestFileRunner
+                    .readObject(getLocationOfSerializedTestFiles(tempDirectory), TestFile[].class);
             installTimeoutWatchdog(testFiles[0].getSettings(), tempDirectory);
             ArrayList<TestResult> testResults = new ArrayList<>();
             for (TestFile testFile : testFiles) {
@@ -178,7 +175,7 @@ public abstract class ForkedTestFileRunner implements Serializable {
                 }
             }
             writeObject(getLocationOfSerializedTestResults(tempDirectory),
-                    testResults.toArray(new TestResult[testResults.size()]));
+                testResults.toArray(new TestResult[0]));
         } catch (Throwable t) {
             try {
                 writeObject(getLocationOfSerializedException(tempDirectory), t);
@@ -198,15 +195,16 @@ public abstract class ForkedTestFileRunner implements Serializable {
     /**
      * Launches a timeout-thread acting as a watchdog over this forked instance.
      * <p>
-     * If a time is specified in the settings, a fresh daemon thread is started
-     * which terminates this instance after the specified time has elapsed.
+     * If a time is specified in the settings, a fresh daemon thread is started which terminates
+     * this instance after the specified time has elapsed.
      * <p>
      * If no timeout has been specified, no thread is launched.
      *
-     * @param settings      the (non-null) settings to take the timeout from.
+     * @param settings the (non-null) settings to take the timeout from.
      * @param tempDirectory
      */
-    private static void installTimeoutWatchdog(ProofCollectionSettings settings, final Path tempDirectory) {
+    private static void installTimeoutWatchdog(ProofCollectionSettings settings,
+            final Path tempDirectory) {
 
         String timeoutString = settings.get(FORK_TIMEOUT_KEY);
         if (timeoutString == null) {
@@ -219,13 +217,13 @@ public abstract class ForkedTestFileRunner implements Serializable {
         try {
             timeout = Integer.parseInt(timeoutString);
         } catch (NumberFormatException ex) {
-            throw new RuntimeException("The setting forkTimeout requires an integer, not " +
-                    timeoutString, ex);
+            throw new RuntimeException(
+                "The setting forkTimeout requires an integer, not " + timeoutString, ex);
         }
 
         if (timeout <= 0) {
-            throw new RuntimeException("The setting forkTimeout requires a positive integer, not " +
-                    timeoutString);
+            throw new RuntimeException(
+                "The setting forkTimeout requires a positive integer, not " + timeoutString);
         }
 
         Thread t = new Thread("Timeout watchdog") {
@@ -235,9 +233,9 @@ public abstract class ForkedTestFileRunner implements Serializable {
                     if (verbose) {
                         System.err.println("Timeout watcher launched (" + timeout + " secs.)");
                     }
-                    Thread.sleep(timeout * 1000);
+                    Thread.sleep(timeout * 1000L);
                     InterruptedException ex =
-                            new InterruptedException("forkTimeout (" + timeout + "sec.) elapsed");
+                        new InterruptedException("forkTimeout (" + timeout + "sec.) elapsed");
                     writeObject(getLocationOfSerializedException(tempDirectory), ex);
                     // TODO consider something other than 0 here
                     if (verbose) {
@@ -245,7 +243,8 @@ public abstract class ForkedTestFileRunner implements Serializable {
                     }
                     System.exit(0);
                 } catch (Exception ex) {
-                    System.err.println("The watchdog has been interrupted or failed. Timeout cancelled.");
+                    System.err.println(
+                        "The watchdog has been interrupted or failed. Timeout cancelled.");
                     ex.printStackTrace();
                 }
             }
